--- a/src/styles/Search.css
+++ b/src/styles/Search.css
@@ -4,7 +4,6 @@
   width: 100%;
   background-color: var(--white);
   border-radius: 0.6rem;
-  border: 1px solid var(--gray-light);
   margin-top: -4rem;
   padding: 0 1rem;
 }
@@ -51,7 +50,6 @@
 
 .location-input {
   max-width: 90%;
-  /* border: 1px solid red; */
 }
 
 .filter-icon {
@@ -68,6 +66,9 @@
   align-items: center;
 }
 
+.dark-blue .checkbox-container {
+  color: var(--white);
+}
 /* Checkbox */
 .checkbox {
   -webkit-appearance: none;
@@ -82,7 +83,11 @@
   background-repeat: no-repeat;
   background-size: 0%;
   cursor: pointer;
-  transition: all 0.3s;
+  transition: all 0.2s;
+}
+
+.dark-blue .checkbox {
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
 .checkbox:hover {
@@ -101,4 +106,46 @@
 .checkbox + label {
   margin-left: 1.6rem;
   cursor: pointer;
+}
+
+.dark-blue input {
+  background-color: var(--blue-very-dark);
+  color: var(--white);
+}
+
+/* Media Queries */
+@media screen and (max-width: 900px) {
+  .search {
+    padding: 0 0rem;
+  }
+
+  .title-input-container {
+    width: 35%;
+  }
+  
+  .location-input-container {
+    width: 25%;
+  }
+  
+  .action-container {
+    width: 40%;
+  }
+
+  
+}
+
+@media screen and (max-width: 768px) {
+  .search .btn {
+    padding: 1rem 1.5rem;
+  }
+
+  .title-input-container,
+  .action-container {
+    width: 35%;
+  }
+  
+  .location-input-container {
+    width: 30%;
+  }
+
 }
