--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -24,7 +24,6 @@ html {
 
 body {
   font-size: 1.6rem;
-  background-color: var(--gray-light);
 }
 
 *,
@@ -36,9 +35,9 @@ body {
 }
 
 .container {
-  max-width: 1000px;
-  margin: 0 auto;
-  padding: 0 1rem;
+  max-width: 1100px;
+  margin: 0 auto;   
+  padding: 0 1.5rem;
 }
 
 .btn {
@@ -59,6 +58,32 @@ body {
   background-color: var(--violet-light);
 }
 
+.btn-lg {
+  padding: 2.4rem 6rem;
+}
+
+.mb-md {
+  margin-bottom: 1.6rem;
+}
+
+.mb-lg {
+  margin-bottom: 2.6rem;
+}
+
+.light {
+  background-color: var(--gray-light);
+}
+
+.dark {
+  background-color: var(--midnight);
+}
+
+.dark-blue {
+  background-color: var(--blue-very-dark);
+}
+
 @import "./App.css";
 @import "./Header.css";
 @import "./Search.css";
+@import "./Jobs.css";
+@import "./Job.css";
