--- a/src/styles/Job.css
+++ b/src/styles/Job.css
@@ -1,5 +1,4 @@
 .job-container {
-  background-color: var(--white);
   border-radius: 0.6rem;
   padding: 3.5rem 2.5rem;
   /* padding-right: 1rem; */
@@ -45,14 +44,15 @@ h2 {
   margin-bottom: 1.6rem;
 }
 
-.white {
-  color: var(--white);
-}
-
 .text-gray {
   color: var(--gray-dark);
 }
 
 .text-violet {
   color: var(--violet);
+}
+
+
+.bg-dark h2 {
+  color: var(--white);
 }
