--- a/src/styles/Job.css
+++ b/src/styles/Job.css
@@ -9,14 +9,19 @@
 .company-logo-container {
   width: 5rem;
   height: 5rem;
-  border: 1px solid var(--violet);
   margin-top: -6rem;
+  background-color: var(--white);
+  padding: 0.2rem;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 0.5px 3px rgba(0, 0, 0, 0.1);
 }
 
 .company-logo-container,
 .company-logo {
   border-radius: 1.5rem;
-
 }
 
 .company-logo {
