--- a/src/styles/JobDetails.css
+++ b/src/styles/JobDetails.css
@@ -6,18 +6,24 @@
   display: flex;
   background-color: var(--white);
   border-radius: 0.6rem;
-  height: 14rem;
+  /* height: 14rem; */
   margin: 0 auto;
 }
 
 .logo-container {
   width: 14rem;
   height: 14rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 1rem;
 }
 
 .logo-container img {
-  border-top-right-radius: 0.6rem;
-  border-top-left-radius: 0.6rem;
+  /* border-top-left-radius: 0.6rem;
+  border-bottom-left-radius: 0.6rem; */
+  border-radius: 0.6rem;
+  max-width: 100%;
 }
 
 .name-link {
@@ -50,10 +56,6 @@
 
 .name-link p {
   color: var(--gray-dark);
-}
-
-.bg-dark .job-description {
-  color:  var(--gray);
 }
 
 
@@ -89,6 +91,23 @@
   margin-top: 4rem;
 }
 
+.job-description p {
+  margin: 1.6rem 0;
+}
+
+.bg-dark .job-description {
+  color:  var(--gray);
+}
+
+ul {
+  margin-left: 1.3rem;
+  /* list-style: none; */
+}
+
+ul li {
+  margin: 1rem 0;
+}
+
 /* How to Apply */
 .how-to-apply {
   background-image: url(../assets/desktop/bg-pattern-detail-footer.svg);
@@ -101,10 +120,11 @@
   padding: 3rem;
 }
 
-.job-description p {
-  margin: 1rem 0;
+.apply-details {
+  margin-top: 2rem;
 }
 
+/* Footer */
 .footer {
   background-color: var(--white);
   width: 100%;
