--- a/src/styles/Job.css
+++ b/src/styles/Job.css
@@ -17,10 +17,7 @@
   align-items: center;
   justify-content: center;
   box-shadow: 0 0.5px 3px rgba(0, 0, 0, 0.1);
-}
-
-.company-logo-container,
-.company-logo {
+  overflow: hidden;
   border-radius: 1.5rem;
 }
 
