--- a/src/styles/JobDetails.css
+++ b/src/styles/JobDetails.css
@@ -1,6 +1,6 @@
 .job-details {
   max-width: 73rem;
-  /* margin: 0 auto; */
+  margin: 0 auto;
 }
 .company-info {
   display: flex;
@@ -16,12 +16,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 0 1rem;
+  padding: 0.5rem;
 }
 
 .logo-container img {
-  /* border-top-left-radius: 0.6rem;
-  border-bottom-left-radius: 0.6rem; */
   border-radius: 0.6rem;
   max-width: 100%;
 }
@@ -74,6 +72,7 @@
 
 .btn-link {
   text-decoration: none;
+  text-align: center;
 }
 
 .job {
@@ -100,7 +99,7 @@
 }
 
 ul {
-  margin-left: 1.3rem;
+  margin-left: 1.5rem;
   /* list-style: none; */
 }
 
@@ -129,6 +128,11 @@ code {
   border-radius: 0.6rem;
   margin: 0 auto 5rem;
   padding: 3rem;
+  word-break: break-all;
+}
+
+.how-to-apply a {
+  color: var(--white);
 }
 
 .apply-details {
@@ -148,7 +152,20 @@ code {
   padding: 0;
 }
 
+/* No Job */
+.no-job {
+  color: var(--violet);
+  font-size: 2rem;
+  text-align: center;
+  margin-top: 10rem;
+}
+
+
 @media screen and (max-width: 550px) {
+  .job {
+    padding: 1.6rem;
+  }
+
   .company-info,
   .job-summary ,
   .name-link {
@@ -190,9 +207,17 @@ code {
     margin-bottom: 3rem;
   }
 
+  .name-link {
+    align-items: stretch;
+  }
+
 }
 
 @media screen and (max-width: 375px) {
+
+  .footer .name-link {
+    text-align: center;
+  }
   .how-to-apply {
     background-image: url(../assets/mobile/bg-pattern-detail-footer.svg);
   }
