--- a/src/styles/Search.css
+++ b/src/styles/Search.css
@@ -122,6 +122,52 @@
   color: var(--white);
 }
 
+/* Modal */
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(25, 32, 45, 0.2);
+  z-index: 10;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-content {
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  border-radius: 0.5rem;
+}
+
+.text-input-container {
+  display: flex;
+  align-items: center;
+  border-bottom: 2px solid rgba(25, 32, 45, 0.05);
+  padding: 2rem;
+}
+
+.modal-checkbox-container {
+  display: flex;
+  align-items: center;
+  padding: 2rem;
+}
+
+.modal-content button {
+  margin: 1rem 2rem 3rem;
+}
+
+.hide {
+  display: none;
+}
+
+.show {
+  display: flex;
+}
+
 /* Media Queries */
 @media screen and (max-width: 900px) {
   .search {
