--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -40,7 +40,7 @@ body {
 
 .container {
   max-width: 1100px;
-  margin: 0 auto;   
+  margin: 0 auto;
   padding: 0 1.5rem;
 }
 
@@ -89,6 +89,23 @@ body {
 
 .bg-dark {
   background-color: var(--blue-very-dark);
+}
+
+button:disabled {
+  cursor: not-allowed;
+}
+
+.not-found {
+  text-align: center;
+  color: var(--violet);
+  margin-top: 10rem;
+}
+
+.loading {
+  font-size: 2.5rem;
+  text-align: center;
+  margin-top: 5rem;
+  color: var(--violet);
 }
 
 @import "./App.css";
